# TripPlanner

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  README_NEW.md  VERCEL_DEPLOYMENT.md  main.py  requirements.txt  setup.md  setup.py  setup.sh  streamlit_app.py  vercel.json
api/: streamlit_app.py
backend/: main.py  pyproject.toml  render.yaml  requirements.txt
backend/prompt_library/: prompt.py
backend/utils/: save_to_document.py
frontend/: .env.example  index.html  package-lock.json  package.json  static.json  vite.config.js
frontend/src/: main.js
frontend/static/: app.js  index.html
static/: styles.css
templates/: index.html
